align info table labels to the top fixes issue #1631

--- a/pkg/base/cockpit.css
+++ b/pkg/base/cockpit.css
@@ -59,6 +59,7 @@ code, kbd, pre, samp {
 .cockpit-info-table td {
     padding-left: 0.75em;
     padding-top: 0.25em;
+    vertical-align: top;
 }
 
 .cockpit-info-table td:first-child {
